--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
+  
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,10 +14,12 @@
 }
  
 #root {
+  
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
 }
 
 .link {
@@ -32,7 +34,7 @@
 body {
   margin: 0;
   display: flex;
-
+  background-image: url("./assets/original-cv.png");  
   min-width: 320px;
   min-height: 100vh;
 }
@@ -65,6 +67,7 @@ h1 {
   :root {
     color: #213547;
     background-color: #ffffff;
+    
   }
   a:hover {
     color: #747bff;
