--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@
 body {
   margin: 0;
   display: flex;
-  background-image: url("./assets/original-cv.png"); 
+  /* background-image: url("./assets/original-cv.png");  */
   background-repeat: no-repeat;
   background-size: contain;
   background-position-y: bottom; 
