--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@
 body {
   margin: 0;
   display: flex;
-  /* background-image: url("./assets/original-cv.png");  */
+  background-image: url("./assets/original-cv.png");  
   background-repeat: no-repeat;
   background-size: contain;
   background-position-y: bottom; 
@@ -44,7 +44,7 @@ body {
 }
 
 h1 {
-  color: greenyellow;
+  color: rgb(31, 158, 6);
   font-size: 3.2em;
   line-height: 1.1;
 }
