--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 :root {
+  background-image: url(./assets/neom-HYHYGLs-Rp8-unsplash.jpg);
+  background-size: cover;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -34,7 +36,7 @@
 body {
   margin: 0;
   display: flex;
-  background-image: url("./assets/original-cv.png");  
+  background-image: url("./assets/transparent-cv.png");  
   background-repeat: no-repeat;
   background-size: contain;
   background-position-y: bottom; 
@@ -78,6 +80,9 @@ h1 {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    border: none;
+    padding: 20px;
+    
   }
 }
+
