--- a/src/index.css
+++ b/src/index.css
@@ -31,25 +31,7 @@
   text-decoration: inherit;
 }
 .link:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  /* background-image: url("./assets/transparent-cv.png");   */
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position-y: bottom; 
-  background-position-x: left ;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  color: rgb(80, 179, 9);
-  font-size: 3.2em;
-  line-height: 1.1;
+  color: #33b91f;
 }
 
 .button {
