--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,14 @@
 :root {
   background-image: url(./assets/neom-HYHYGLs-Rp8-unsplash.jpg);
+  background-repeat: no-repeat;
   background-size: cover;
-  
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
   
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
  
 #root {
