--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,6 @@
 h1 {
-    color: rgb(80, 179, 9);
-    font-size: 3.2em;
-    line-height: 1.1;
+    font-family: fantasy;
+    color: rgb(9, 17, 3);
+    font-size: 5.3em;
+    line-height: 1.7;
   }
