--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -1,5 +1,7 @@
 .li {
     display: flex;
+    font-family: fantasy;
+    font-size: 35px;
 
 }
 
@@ -8,12 +10,13 @@
 }
 
 .button {
-    background: none;
-    border: none;
+    background-color: black;
+    border-color: rgb(51, 238, 5);
+    border-width: 8px;
     padding: 0;
     margin: 0;
     margin-left: auto;
     font-size: 20px;
-    color: red;
+   
 }
 
