--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -1,25 +1,22 @@
 .li {
-    display: flex;
-    font-family: fantasy;
-    font-size: 35px;
-
+  color: black;
+  display: flex;
+  font-family: fantasy;
+  font-size: 35px;
 }
 
 .checkbox {
-   size: 20px;
-   margin-right: 2rem;
-   font-family: fantasy;
-   
+  size: 20px;
+  margin-right: 2rem;
+  font-family: fantasy;
 }
 
 .button {
-    background-color: black;
-    border-color: rgb(51, 238, 5);
-    border-width: 8px;
-    padding: 0;
-    margin: 0;
-    margin-left: auto;
-    font-size: 26px;
-   
+  background-color: black;
+  border-color: rgb(36, 170, 3);
+  border-width: 8px;
+  padding: 0;
+  margin: 0;
+  margin-left: auto;
+  font-size: 26px;
 }
-
