Changed flex wrap to no wrap and updated background size.

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 :root {
   background-image: url(./assets/beach-1751455_1280.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 2000px;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
 }
 
 #root {
