Changed background size back to cover.

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   background-image: url(./assets/beach-1751455_1280.jpg);
   background-repeat: no-repeat;
-  background-size: 2000px;
+  background-size: cover;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
