--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -19,4 +19,16 @@
   margin: 0;
   margin-left: auto;
   font-size: 26px;
+  margin-right: 2rem;
+}
+
+.edit {
+  background-color: transparent;
+  color: black;
+  padding: 0;
+  margin: 0;
+  text-align: right;
+  left: auto;
+
+  margin-right: 2rem;
 }
