--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,3 @@
-h1 {
-    font-family: fantasy;
-    color: rgb(9, 17, 3);
-    font-size: 5.3em;
-    line-height: 1.1;
-  }
+.body {
+  height: calc(100vh - (6rem + 5px));
+}
