--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,13 @@
   background-image: url(./assets/beach-1751455_1280.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
 }
 
 #root {
