--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap-reverse; */
+  overscroll-behavior-y: none;
 }
 
 #root {
