--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,39 @@
-:root {
+:root,
+body {
   background-image: url(./assets/beach-1751455_1280.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   /* flex-wrap: wrap-reverse; */
-  overscroll-behavior-y: none;
+  /* overscroll-behavior-y: none; */
 }
 
+body > div {
+  height: 100%;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+/*html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+body > div {
+  height: 100%;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+*/
 #root {
   max-width: 1280px;
   margin: 0 auto;
