changed color on edit button.

--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -27,7 +27,7 @@
   font-family: fantasy;
   font-size: x-large;
   border: black;
-  color: black;
+  color: blue;
   padding: 0.2rem;
   margin: 1rem;
   text-align: right;
