--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -6,13 +6,13 @@
 }
 
 .checkbox {
-  size: 20px;
+  size: 40px;
   margin-right: 2rem;
   font-family: fantasy;
 }
 
 .button {
-  background-color: black;
+  background-color: whitesmoke;
   border-color: rgb(36, 170, 3);
   border-width: 8px;
   padding: 0;
@@ -26,8 +26,8 @@
   background-color: transparent;
   font-family: fantasy;
   font-size: x-large;
-  border: black;
-  color: blue;
+  border: white;
+  color: rgba(36, 21, 243, 0.692);
   padding: 0.2rem;
   margin: 1rem;
   text-align: right;
