--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  /* overscroll-behavior-y: none; */
 }
 
 body > div {
@@ -42,7 +41,7 @@ body > div {
   font-weight: 500;
   padding: 0.25rem 1rem;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: rgba(36, 21, 243, 0.692);
   cursor: pointer;
   transition: border-color 0.25s;
 }
