Reworked font sizes an d alignment.

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,7 @@
 :root,
 body {
-  background-repeat: no-repeat;
-  background-size: cover;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  line-height: 1;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   width: 100%;
@@ -21,8 +18,8 @@ body > div {
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 1rem;
+  text-align: left;
 }
 
 .link {
