--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -2,13 +2,12 @@
   color: black;
   display: flex;
   font-family: fantasy;
-  font-size: 35px;
+  font-size: 18px;
 }
 
 .checkbox {
   size: 40px;
-  margin-right: 2rem;
-  font-family: fantasy;
+  margin-right: 3rem;
 }
 
 .button {
@@ -25,8 +24,7 @@
 .edit {
   background-color: transparent;
   font-family: fantasy;
-  font-size: x-large;
-  border: white;
+  font-size: large;
   color: rgba(36, 21, 243, 0.692);
   padding: 0.2rem;
   margin: 1rem;
