--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,13 @@ body {
   line-height: 1;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vw;
   overflow: hidden;
 }
 
 body > div {
-  height: 100%;
+  height: 100vw;
   -webkit-overflow-scrolling: touch;
 }
 
