--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,14 @@ body {
   line-height: 1;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  width: 100vw;
-  height: 100vw;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
 body > div {
-  height: 100vw;
-  -webkit-overflow-scrolling: touch;
+  height: 100%;
+  /* -webkit-overflow-scrolling: touch; */
 }
 
 #root {
@@ -24,8 +24,8 @@ body > div {
 .link {
   font-weight: 500;
   color: #646cff;
-  text-decoration: inherit;
 }
+
 .link:hover {
   color: #33b91f;
 }
