--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
 
 body > div {
   height: 100%;
-  /* -webkit-overflow-scrolling: touch; */
+  -webkit-overflow-scrolling: touch;
 }
 
 #root {
