--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -4,6 +4,7 @@
   font-family: fantasy;
   font-size: 18px;
   overflow: hidden;
+  padding: 4px;
 }
 
 .checkbox {
@@ -14,21 +15,20 @@
 .button {
   background-color: whitesmoke;
   border-color: rgb(36, 170, 3);
-  border-width: 8px;
   padding: 0;
   margin: 0;
-  margin-left: auto;
   font-size: 26px;
-  margin-right: 2rem;
+  margin-left: 1rem;
 }
 
 .edit {
-  background-color: transparent;
+  background-color: lightgray;
   font-family: fantasy;
-  font-size: large;
+  font-size: medium;
   color: rgba(36, 21, 243, 0.692);
   padding: 0.2rem;
   margin: 1rem;
   left: auto;
   margin-right: auto;
+  align-items: right;
 }
