--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ body > div {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
 .link {
@@ -31,15 +30,12 @@ body > div {
 }
 
 .button {
-  border-radius: 8px;
-  border: 3px solid transparent;
-  font-size: 1em;
-  font-weight: 500;
-  padding: 0.25rem 1rem;
+  border-radius: 5px;
+  border: 3px solid black;
+  padding: 0.25rem;
   font-family: inherit;
   background-color: rgba(36, 21, 243, 0.692);
   cursor: pointer;
-  transition: border-color 0.25s;
 }
 .button:hover {
   border-color: #646cff;
