--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -25,9 +25,8 @@
   font-family: fantasy;
   font-size: medium;
   color: rgba(36, 21, 243, 0.692);
-  padding: 0.2rem;
-  margin: 1rem;
+  padding: 0.4rem;
+  margin: 10px;
   left: auto;
   margin-right: auto;
-  align-items: right;
 }
