--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,14 @@ body {
   line-height: 1;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 body > div {
   height: 100%;
-  -webkit-overflow-scrolling: touch;
+  /* -webkit-overflow-scrolling: touch; */
 }
 
 #root {
