--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1;
+  /* color-scheme: light dark; */
   color: rgba(255, 255, 255, 0.87);
   width: 100%;
   height: 100%;
