--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body > div {
   border: 3px solid black;
   padding: 0.25rem;
   font-family: inherit;
-  background-color: rgba(255, 5, 5, 0.97);
+  background-color: #33b91f;
   cursor: pointer;
 }
 .button:hover {
