--- a/src/components/Todo.module.css
+++ b/src/components/Todo.module.css
@@ -24,7 +24,7 @@
   background-color: lightgray;
   font-family: fantasy;
   font-size: medium;
-  color: rgba(255, 5, 5, 0.97);
+  color: #28801a;
   padding: 0.4rem;
   margin: 10px;
   left: auto;
